@@ -4,11 +4,20 @@ package Spotify.controller.rest.impl;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.mockito.Matchers.*;
+import static org.mockito.Mockito.*;
 
 
-import java.util.Collections;
+import java.util.*;
 
-import Spotify.controller.rest.model.D4iPageRest;
+import Spotify.controller.rest.model.*;
+import Spotify.mapper.AlbumMapper;
+import Spotify.mapper.PostSongMapper;
+import Spotify.mapper.SongMapper;
+import Spotify.persistence.entity.ArtistEntity;
+import Spotify.persistence.repository.ArtistRepository;
+import Spotify.persistence.repository.SongRepository;
+import Spotify.service.impl.SongServiceImpl;
+import org.assertj.core.api.Assertions;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.MockitoAnnotations;
@@ -22,9 +31,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 
 import Spotify.persistence.entity.SongEntity;
-import Spotify.controller.rest.impl.SongControllerRestImpl;
-import Spotify.controller.rest.model.SpotifyResponse;
-import Spotify.controller.rest.model.SongRest;
 import Spotify.exception.SpotifyException;
 import Spotify.service.SongService;
 import Spotify.util.constant.RestConstantsUtils;
@@ -33,14 +39,27 @@ public class SongControllerRestImplTest {
 
 	static final Long ID = 1L;
 	static final SongEntity SONG_ENTITY = new SongEntity();
+	static final Set<SongEntity> SONG_ENTITY_SET= new HashSet<>();
+	static final List<ArtistEntity> ARTIST_ENTITY_LIST= new ArrayList<>();
 	static final SongRest SONG_REST = new SongRest();
+	static final PostSongRest POST_SONG_REST = new PostSongRest();
+	static final AlbumRest ALBUM_REST = new AlbumRest();
+	static final ArtistEntity ARTIST_ENTITY = new ArtistEntity();
 
+	@Mock
+	SongMapper songMapper;
+
+	@Mock
+	PostSongMapper postSongMapper;
+
+	@Mock
+	private SongRepository songRepository;;
 
     @Mock
     private SongService songService;
 
-	//@Mock
-	//private SongRestMapper songRestMapper;
+	@Mock
+	private ArtistRepository artistRepository;
 
     @InjectMocks
     private SongControllerRestImpl songControllerRestImpl;
@@ -48,38 +67,47 @@ public class SongControllerRestImplTest {
 	@Before
 	public void init() {
 		MockitoAnnotations.initMocks(this);
+		ARTIST_ENTITY_LIST.add(ARTIST_ENTITY);
+		SONG_ENTITY_SET.add(SONG_ENTITY);
+		ARTIST_ENTITY.setSongs(SONG_ENTITY_SET);
+		SONG_ENTITY.setArtists(ARTIST_ENTITY_LIST);
+		ALBUM_REST.setId(ID);
+		SONG_ENTITY.setId(ID);
+		SONG_REST.setId(ID);
+		ARTIST_ENTITY.setId(ID);
+
+		Mockito.when(songRepository.findById(anyLong())).thenReturn(Optional.of(SONG_ENTITY));
+		Mockito.when(songMapper.mapToRest(any(SongEntity.class))).thenReturn(SONG_REST);
+		Mockito.when(songMapper.mapToEntity(any(SongRest.class))).thenReturn(SONG_ENTITY);
+		Mockito.when(postSongMapper.mapToRest(any(SongEntity.class))).thenReturn(POST_SONG_REST);
+		Mockito.when(postSongMapper.mapToEntity(any(PostSongRest.class))).thenReturn(SONG_ENTITY);
 
 	}
-/*
+
     @Test
     public void getAllSongsTest() throws SpotifyException {
 		// given
 		int page = 0;
 		int size = 2;
-		int pageNumber = 1;
-		Pageable pageable = PageRequest.of(page, size);
 
-		SongRest songRest2 = new SongRest();
-		songRest2.setId(2L);
-
-		Page<SongDto> songsPagedModel = new PageImpl<>(Collections.singletonList(new SongDto()));
-		Mockito.when(songService.getAllSongs(any(Pageable.class))).thenReturn(songsPagedModel);
-		Mockito.when(songRestMapper.mapToRest(any(SongDto.class))).thenReturn(SONG_REST);
-
+		Pageable pageable = PageRequest.of(0, 1);
+		Page<SongEntity> songPage = new PageImpl<>(List.of(SONG_ENTITY), pageable, 0);
+		Page<SongRest> songRestPage = new PageImpl<>(List.of(SONG_REST), pageable, 0);
 		// when
-		SpotifyResponse<D4iPageRest<SongRest>> response = songControllerRestImpl.getAllSongs(page, size, pageable);
+		Mockito.when(songService.getAllSongs(any(Pageable.class))).thenReturn(songRestPage);
+		SpotifyResponse<D4iPageRest<SongRest>> response = songControllerRestImpl.getAllSongs(0L, 2L, pageable);
 
 		// then
 		assertNotNull(response);
 		assertEquals(RestConstantsUtils.OK, response.getMessage());
 		assertNotNull(response.getData().getContent());
+
 	}
 
     @Test
     public void getSongByIdTest() throws SpotifyException {
-		Mockito.when(songService.getSongById(anyLong())).thenReturn(SONG_DTO);
-		Mockito.when(songRestMapper.mapToRest(any(SongDto.class))).thenReturn(SONG_REST);
 
+		Mockito.when(songService.getSongById(anyLong())).thenReturn(SONG_REST);
 		SpotifyResponse<SongRest> response = songControllerRestImpl.getSongById(ID);
 
 		assertNotNull(response);
@@ -87,41 +115,60 @@ public class SongControllerRestImplTest {
 		assertEquals(RestConstantsUtils.OK, response.getMessage());
 		assertEquals(SONG_REST, response.getData());
 	}
+	@Test
+	public void getAlbumBySongIdTest() throws SpotifyException {
+
+		Mockito.when(songService.getAlbumBySongId(anyLong())).thenReturn(ALBUM_REST);
+		SpotifyResponse<AlbumRest> response = songControllerRestImpl.getAlbumBySongId(ID);
+
+		assertNotNull(response);
+		assertEquals(String.valueOf(HttpStatus.OK), response.getStatus());
+		assertEquals(RestConstantsUtils.OK, response.getMessage());
+		assertEquals(ALBUM_REST, response.getData());
+	}
 
     @Test
     public void createSongTest() throws SpotifyException {
-		Mockito.when(songService.createSong(any(SongDto.class))).thenReturn(SONG_DTO);
-		Mockito.when(songRestMapper.mapToDto(any(SongRest.class))).thenReturn(SONG_DTO);
-		Mockito.when(songRestMapper.mapToRest(any(SongDto.class))).thenReturn(SONG_REST);
 
-		SpotifyResponse<SongRest> response = songControllerRestImpl.createSong(SONG_REST);
+		Mockito.when(songService.createSong(any(PostSongRest.class))).thenReturn(POST_SONG_REST);
+		SpotifyResponse<PostSongRest> response = songControllerRestImpl.createSong(POST_SONG_REST);
 
 		assertNotNull(response);
 		assertEquals(String.valueOf(HttpStatus.OK), response.getStatus());
 		assertEquals("200", response.getCode());
 		assertEquals(RestConstantsUtils.OK, response.getMessage());
-		assertEquals(SONG_REST, response.getData());
+		Assertions.assertThat(response.getData()).isEqualTo(POST_SONG_REST);
 	}
 
     @Test
     public void deleteSongTest() throws SpotifyException {
 		songControllerRestImpl.deleteSong(ID);
-
 		Mockito.verify(songService, Mockito.times(1)).deleteSong(Mockito.anyLong());
-
+	}
+	@Test
+	public void deleteArtistFromSongById() throws SpotifyException{
+		songControllerRestImpl.deleteArtistFromSongById(ID,ID);
+		verify(songService,times(1)).deleteArtistFromSongById(ID,ID);
 	}
 
     @Test
     public void updateSongTest() throws SpotifyException {
-		SongDto songDtoModified = new SongDto();
-		songDtoModified.setId(2L);
-		Mockito.when(songService.updateSong(any(SongDto.class))).thenReturn(songDtoModified);
 
-		SpotifyResponse<SongRest> response = songControllerRestImpl.updateSong(SONG_REST);
+
+		SpotifyResponse<PostSongRest> response = songControllerRestImpl.updateSong(POST_SONG_REST);
 
 		assertNotNull(response);
 		assertEquals(String.valueOf(HttpStatus.OK), response.getStatus());
 		assertEquals("200", response.getCode());
 		assertEquals(RestConstantsUtils.OK, response.getMessage());
-	}*/
+	}
+	@Test
+	public void updateArtistBySongIdTest() throws SpotifyException {
+
+		SpotifyResponse<SongRest> response = songControllerRestImpl.updateArtistBySongId(ID,ID);
+		assertNotNull(response);
+		assertEquals(String.valueOf(HttpStatus.OK), response.getStatus());
+		assertEquals("200", response.getCode());
+		assertEquals(RestConstantsUtils.OK, response.getMessage());
+	}
 }
